fixed for week03 assignment
